--- a/dev/assets/Project.toml
+++ b/dev/assets/Project.toml
@@ -4,11 +4,8 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 StructuralIdentifiability = "220ca800-aa68-49bb-acd8-6037fa93a544"
 
-[sources]
-StructuralIdentifiability = {path = "/home/runner/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl"}
-
 [compat]
 BenchmarkTools = "1.3"
 Documenter = "0.27, 1"
-ModelingToolkit = "10"
+ModelingToolkit = "10, 11"
 StructuralIdentifiability = "0.5"
