--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,11 +1,11 @@
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 StructuralIdentifiability = "220ca800-aa68-49bb-acd8-6037fa93a544"
+ModelingToolkitBase = "7771a370-6774-4173-bd38-47e70ca0b839"
 
 [compat]
 BenchmarkTools = "1.3"
 Documenter = "0.27, 1"
-ModelingToolkit = "10, 11"
+ModelingToolkitBase = "1.1"
 StructuralIdentifiability = "0.5"
