--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ LinearAlgebra = "1.10, 1.11"
 Logging = "1.10, 1.11"
 MacroTools = "0.5"
 ModelingToolkitBase = "1.1.0"
-Nemo = "0.46, 0.47, 0.48, 0.49, 0.50, 0.51, 0.52, 0.53"
+Nemo = "0.46, 0.47, 0.48, 0.49, 0.50, 0.51, 0.52, 0.53, 0.54"
 ParamPunPam = "0.5.5"
 Pkg = "1.10, 1.11"
 PrecompileTools = "1.2"
