--- a/Project.toml
+++ b/Project.toml
@@ -48,7 +48,7 @@ Pkg = "1.10, 1.11"
 PrecompileTools = "1.2"
 Primes = "0.5"
 Random = "1.10, 1.11"
-RationalFunctionFields = "0.2.3"
+RationalFunctionFields = "0.2.3, 0.3"
 SpecialFunctions = "2"
 SymbolicUtils = "4"
 Symbolics = "7"
